[project]
name = "SeedLayer"
version = "0.1.0"
description = "Deterministic DB seeding for SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "François Naggar-Tremblay", email = "francois.n.tremblay@gmail.com" }
]
dependencies = ["SQLAlchemy>=2.0", "Faker>=37.5.3"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.10",
  "sqlalchemy2-stubs>=0.0.2a38",
  "ty>=0.0.1a20",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
extend-select = ["E501"]

[tool.uv.workspace]
members = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
